<resources>
    <string name="app_name">Unishop</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_items_manage">Items Management</string>
    <string name="menu_consultants_manage">Sales Consultants Management</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_sales_consultant">SalesConsultantActivity</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="title_activity_dasboard">DasboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_account">Account</string>
    <string name="consultants">See all available Consultants</string>
    <string name="network_text">You seem to be offline, check your internet connection and try again</string>
    <string name="error_text">Ops! some error occurred check and try again</string>
    <string name="permissions_text">All the permissions are required in order to access the services, please allow</string>


    <!--    Urls-->
    <string name="LOGIN_URL">https://histogenetic-exhaus.000webhostapp.com/unishop/authenticate.php</string>
    <string name="REGISTER_URL">https://histogenetic-exhaus.000webhostapp.com/unishop/create_user.php</string>
    <string name="CONSULTANT_URL">https://histogenetic-exhaus.000webhostapp.com/unishop/list_consultants.php</string>
    <string name="PRODUCTS_URL">https://histogenetic-exhaus.000webhostapp.com/unishop/list_products.php</string>
    <string name="USER_PROFILE_URL">https://histogenetic-exhaus.000webhostapp.com/unishop/user_profile.php</string>
    <string name="UPDATE_PHONE_URL">https://histogenetic-exhaus.000webhostapp.com/unishop/update_user_phone.php</string>
    <string name="ADD_ITEM_URL">https://histogenetic-exhaus.000webhostapp.com/unishop/add_item.php</string>
    <string name="UPDATE_PRICE_URL">https://histogenetic-exhaus.000webhostapp.com/unishop/update_price.php</string>
    <string name="UPDATE_QUANTITY_URL">https://histogenetic-exhaus.000webhostapp.com/unishop/update_quantity.php</string>


    <!--    Categories-->
    <string name="Healthy_and_Beauty">Healthy &amp; Beauty</string>
    <string name="Grocery">Grocery</string>
    <string name="Women_fashion">Women\'s Fashion</string>
    <string name="Men_fashion">Men\'s Fashion</string>
    <string name="Baby_products">Baby\'s Products</string>
    <string name="Phones_and_Tablets">Phones &amp; Tablets</string>
    <string name="Electronics">Electronics</string>
    <string name="Computing">Computing</string>
    <string name="Appliance">Appliance</string>
    <string name="Home_and_office">Home &amp; Office</string>


    <string name="name_and_description">Refurbished Elitebook Folio 9480m - 14" - Intel Core I7 - 8GB RAM - 500GB HDD - Silver</string>
    <string name="ksh_30_000">KSH 30,000</string>
    <string name="category_computing">Category: Computing</string>
</resources>
