<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_admin_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.unishop.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_admin_home" />

    <fragment
        android:id="@+id/nav_items_manage"
        android:name="com.example.unishop.ui.items_management.ItemsManagementFragment"
        android:label="@string/menu_items_manage"
        tools:layout="@layout/fragment_itmes_management" />

    <fragment
        android:id="@+id/nav_consultants_manage"
        android:name="com.example.unishop.ui.consultants_management.ConsultantsManagementFragment"
        android:label="@string/menu_consultants_manage"
        tools:layout="@layout/fragment_consultants_management" />
</navigation>