<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mintcream"
    android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="350dp"
            app:contentPadding="15dp"
            android:elevation="15dp"
            app:cardElevation="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/laptop"/>
                <TextView
                    android:id="@+id/txtProductDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_and_description"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"/>
                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ksh_30_000"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/txtCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_computing"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
</LinearLayout>